--- a/.gitignore
+++ b/.gitignore
@@ -1,81 +1,7 @@
-# Go binary artifacts
-/bin/
-/obj/
-
-# Go test binary, if any
-*.test
-
 # Go mod files
 go.sum
-
-# Go vendor folder
-/vendor/
-
-# Build output
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-
-# Temporary files created by Go tools
-*.out
-*.log
-
-# IDEs
-# IntelliJ IDEA
-.idea/
 
 # VS Code
 .vscode/
 
-# Sublime Text
-*.sublime-workspace
-*.sublime-project
-
-# Eclipse
-.project
-.classpath
-.csettings
-
-# MacOS files
-.DS_Store
-
-# Linux files
-*~
-
-# Windows files
-Thumbs.db
-Desktop.ini
-
-# Coverage files
-*.coverprofile
-*.out
-
-# Golang CI and build tools
-.golangci.yml
-
-# Dep lock files
-Gopkg.lock
-Gopkg.toml
-
-# Generated Go files
-*.pb.go
-*.generated.go
-
-# Environment files
-.env
-
-# Ignore config and sensitive files (keep sensitive data out of version control)
-config/
-*.json
-*.yml
-*.yaml
-
-# Ignore Docker-related files if not needed
-docker-compose.override.yml
-Dockerfile*
-
-# Ignore build artifacts or scripts
-dist/
-build/
+main
